# Project---Pokemon

./: .gitignore  README.md  export_presets.cfg  girl_icon.png.import  project.godot
assets/NPC/: 001.png.import  002-brendan.png.import  003-may.png.import  004.png.import  005.png.import  006-lass.png.import  007-youngster.png.import  008.png.import  009.png.import  010.png.import  011.png.import  012-bug-catcher.png.import  013.png.import  014.png.import  015.png.import  016.png.import  017.png.import  018.png.import  019.png.import  020.png.import  021.png.import  022.png.import  023.png.import  024.png.import  025.png.import  026.png.import  027.png.import  028.png.import  029-rocket-f.png.import  030-swimmer.png.import  031-swimmer-f.png.import  032.png.import  033.png.import  034-blackbelt.png.import  035.png.import  036-gentleman.png.import  037-sailor.png.import  038-captain.png.import  039-fisher.png.import  040.png.import  (+143 more)
assets/battle/: BattleBackgrounds.png.import
assets/item/: 267.png.import  84.png.import  96.png.import  medi1_1.png.import  medi1_2.png.import  medi2_1.png.import  medi2_2.png.import  medi3_1.png.import  pokeball1.png.import  pokeball2.png.import  pokeball3.png.import  pokeball4.png.import
assets/map/: LinenRoad.png.import
assets/player/: Barry.png.import  Male_Spritesheet.png.import  jump_landing_dust.png.import  player_shadow.png.import
assets/pokemon/: Bulbasaur.png.import  Charmander.png.import  Grimer.png.import  Onix.png.import  (+151 more)
autoload/: utils.gd
src/server/: Cargo.toml
src/server/src/: main.rs  match_system.rs
(+683 files in other folders)
