[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.3", features = ["ws", "headers"] }
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.4"
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
headers = "0.3.5"
rand = "0.8.4"

[profile.release]
lto = "thin"